--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,7 +62,7 @@
     z-index: 997;
     transition: all 0.5s;
     height: 80px;
-    background: rgba(25, 28, 31, 0.8);
+    /* background: rgba(25, 28, 31, 0.8); */
 }
 
 #header.header-transparent {
